blog-boilerplate/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: 192.100.40.5:5001/comments:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
  namespace: development
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
